# ProjectsROS

./: log.txt
devel/: .catkin  .rosinstall  env.bat
devel/lib/pkgconfig/: beginner_tutorials.pc
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/roseus/ros/beginner_tutorials/: manifest.l
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials/src/: listener.cpp  print_points.cpp  talker.cpp
src/beginner_tutorials/src/DATA/: CTA_Bay17.json
